--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,20 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+textarea::-webkit-scrollbar {
+  width: 8px;
+}
+
+textarea::-webkit-scrollbar-track {
+  background: #202124;
+}
+
+textarea::-webkit-scrollbar-thumb {
+  background-color: #636466;
+  border-radius: 10px;
+}
+
+textarea::-webkit-scrollbar-thumb:hover {
+  cursor: auto;
+}
