--- a/app/globals.css
+++ b/app/globals.css
@@ -36,3 +36,26 @@ textarea::-webkit-scrollbar-thumb {
 textarea::-webkit-scrollbar-thumb:hover {
   cursor: auto;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #636466;
+  border-radius: 10px;
+  border: 2px solid #202124;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  cursor: auto;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: #202124;
+}
+
+.note-container {
+  min-height: 100px;
+}
